added basic gene viewer track

--- a/plugins/data/tracks.conf
+++ b/plugins/data/tracks.conf
@@ -1,4 +1,9 @@
-[tracks.ICGC]
-storeClass=icgc-viewer/Store/SeqFeature/queryICGCPortal
+[tracks.ICGC_Mutations]
+storeClass=icgc-viewer/Store/SeqFeature/icgcMutations
 type=JBrowse/View/Track/CanvasVariants
-key=ICGC
+key=ICGC_Mutations
+[tracks.ICGC_Genes]
+storeClass=icgc-viewer/Store/SeqFeature/icgcGenes
+type=JBrowse/View/Track/CanvasVariants
+key=ICGC_Genes
+
