now reuse code between mutation calls

--- a/plugins/data/tracks.conf
+++ b/plugins/data/tracks.conf
@@ -1,7 +1,8 @@
 [tracks.ICGC_Mutations]
-storeClass=icgc-viewer/Store/SeqFeature/icgcMutations
+storeClass=icgc-viewer/Store/SeqFeature/icgcDonorMutations
 type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Mutations
+baseUrl=https://dcc.icgc.org/api/v1
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/icgcGenes
 type=JBrowse/View/Track/CanvasVariants
