some small usability updates

--- a/data/advanced-tracks.conf
+++ b/data/advanced-tracks.conf
@@ -30,6 +30,5 @@ filters={"mutation":{"functionalImpact":{"is":["High"]}}}
 storeClass=icgc-viewer/Store/SeqFeature/icgcCNSM
 type=JBrowse/View/Track/Wiggle/XYPlot
 donor=DO229446
-max_score=1
-min_score=-1
+autoscale=local
 bicolor_pivot=0
