updated readme to use size instead of maxCount

--- a/data/advanced-tracks.conf
+++ b/data/advanced-tracks.conf
@@ -3,14 +3,14 @@ storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
 type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Mutations
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
-maxMutationCount=300
+size=300
 
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
 type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Genes
 filters={"gene":{"type":{"is":["protein_coding"]}}}
-maxGeneCount=400
+size=400
 
 [tracks.ICGC_Genes_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
