update sample tracks, fix issue with about dialog

--- a/data/tracks.conf
+++ b/data/tracks.conf
@@ -2,7 +2,12 @@
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
 type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Mutations
+metadata.datatype=SSM
+unsafePopup=true
+
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/icgcGenes
 type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Genes
+metadata.datatype=Gene
+unsafePopup=true
