add annotations for genes to dialog

--- a/data/advanced-tracks.conf
+++ b/data/advanced-tracks.conf
@@ -4,6 +4,8 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Mutations
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
 size=300
+metadata.datatype=SSM
+unsafePopup=true
 
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
@@ -11,6 +13,8 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Genes
 filters={"gene":{"type":{"is":["protein_coding"]}}}
 size=400
+metadata.datatype=Gene
+unsafePopup=true
 
 [tracks.ICGC_Genes_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
@@ -18,6 +22,8 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Genes_donor_DO229446
 donor=DO229446
 filters={"gene":{"type":{"is":["protein_coding"]}}}
+metadata.datatype=Gene
+unsafePopup=true
 
 [tracks.ICGC_SSMs_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
@@ -25,3 +31,5 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_SSMs_donor_DO229446
 donor=DO229446
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
+metadata.datatype=SSM
+unsafePopup=true
