--- a/data/advanced-tracks.conf
+++ b/data/advanced-tracks.conf
@@ -6,6 +6,7 @@ filters={"mutation":{"functionalImpact":{"is":["High"]}}}
 size=300
 metadata.datatype=SSM
 unsafePopup=true
+fmtDetailValue_projects=function(value) { return "<div id='projects-icgc-" + value +  "'>Loading...</div>";}
 
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
@@ -15,6 +16,7 @@ filters={"gene":{"type":{"is":["protein_coding"]}}}
 size=400
 metadata.datatype=Gene
 unsafePopup=true
+fmtDetailValue_annotations=function(value) { return "<div id='annotations-icgc-" + value +  "'>Loading...</div>";}
 
 [tracks.ICGC_Genes_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
@@ -24,6 +26,7 @@ donor=DO229446
 filters={"gene":{"type":{"is":["protein_coding"]}}}
 metadata.datatype=Gene
 unsafePopup=true
+fmtDetailValue_annotations=function(value) { return "<div id='annotations-icgc-" + value +  "'>Loading...</div>";}
 
 [tracks.ICGC_SSMs_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
@@ -33,3 +36,4 @@ donor=DO229446
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
 metadata.datatype=SSM
 unsafePopup=true
+fmtDetailValue_projects=function(value) { return "<div id='projects-icgc-" + value +  "'>Loading...</div>";}
