better loading message

--- a/data/tracks.conf
+++ b/data/tracks.conf
@@ -4,7 +4,7 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Mutations
 metadata.datatype=SSM
 unsafePopup=true
-fmtDetailValue_projects=function(value) { return "<div id='projects-icgc-" + value +  "'>Loading...</div>";}
+fmtDetailValue_projects=function(value) { return "<div id='projects-icgc-" + value +  "'>Loading content...</div>";}
 
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/icgcGenes
@@ -12,4 +12,4 @@ type=JBrowse/View/Track/CanvasVariants
 key=ICGC_Genes
 metadata.datatype=Gene
 unsafePopup=true
-fmtDetailValue_annotations=function(value) { return "<div id='annotations-icgc-" + value +  "'>Loading...</div>";}
+fmtDetailValue_annotations=function(value) { return "<div id='annotations-icgc-" + value +  "'>Loading content...</div>";}
