point dockerfile to next release

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /jbrowse/
 # Download ICGC Viewer
 RUN git clone https://github.com/agduncan94/icgc-viewer /icgc-viewer/ && \
     cd /icgc-viewer/ && \
-    git checkout develop && \
+    git checkout 0.1.5 && \
     cp -r icgc-viewer /jbrowse/plugins/icgc-viewer && \
     cat ./data/jbrowse.conf > /jbrowse/jbrowse.conf
 
