make missing dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ services:
   - docker
 
 before_install:
+  - mkdir docker/data
   - cp cypress/data/tracks.conf docker/data/tracks.conf
   - cd docker/data
   - wget http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa
