--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ services:
 before_install:
   - mkdir docker/data
   - cp cypress/data/tracks.conf docker/data/tracks.conf
+  - cp data/jbrowse.conf docker/data/jbrowse.conf
   - cd docker/data
-  # - curl -o GRCh37.p13.genome.fa  http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa
-  # - curl -o GRCh37.p13.genome.fa.fai http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa.fai
+  - curl -o GRCh37.p13.genome.fa  http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa
+  - curl -o GRCh37.p13.genome.fa.fai http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa.fai
   - cd ../
   - docker-compose build
   - docker-compose up -d
@@ -29,5 +30,6 @@ before_install:
 
 install:
   - npm ci
+
 script:
   - $(npm bin)/cypress run --record
