attempt to fix testing, plus some testing parameter types

--- a/cypress/data/tracks.conf
+++ b/cypress/data/tracks.conf
@@ -1,7 +1,7 @@
-refSeqs=GRCh37.genome.fa.fai
+refSeqs=Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.fai
   
 [tracks.refseqs]
-urlTemplate=GRCh37.genome.fa
+urlTemplate=Homo_sapiens.GRCh37.75.dna.chromosome.1.fa
 
 [tracks.ICGC_Mutations]
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
