--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,13 @@ services:
 before_install:
   - mkdir docker/data
   - cp cypress/data/tracks.conf docker/data/tracks.conf
+  - cp cypress/data/Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.fai docker/data/Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.fai
   - cp data/jbrowse.conf docker/data/jbrowse.conf
   - cd docker/data
-  - curl -o GRCh37.p13.genome.fa  http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa
-  - curl -o GRCh37.p13.genome.fa.fai http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa.fai
+  - curl -o Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.gz http://ftp.ensembl.org/pub/release-75/fasta/homo_sapiens/dna/Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.gz
+  - tar -xzf Homo_sapiens.GRCh37.75.dna.chromosome.1.fa.gz
+  #- curl -o GRCh37.p13.genome.fa  http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa
+  #- curl -o GRCh37.p13.genome.fa.fai http://bioinfo.hpc.cam.ac.uk/downloads/datasets/fasta/grch37/GRCh37.p13.genome.fa.fai
   - cd ../
   - docker-compose build
   - docker-compose up -d
