--- a/data/advanced-tracks.conf
+++ b/data/advanced-tracks.conf
@@ -1,15 +1,16 @@
 [tracks.ICGC_Mutations]
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
-type=icgc-viewer/View/Track/CanvasVariants
+type=icgc-viewer/View/Track/SSMTrack
 key=ICGC_Mutations
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
 size=300
 metadata.datatype=SSM
 unsafePopup=true
+style.className=feature3
 
 [tracks.ICGC_Genes]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
-type=icgc-viewer/View/Track/CanvasVariants
+type=icgc-viewer/View/Track/GeneTrack
 key=ICGC_Genes
 filters={"gene":{"type":{"is":["protein_coding"]}}}
 size=400
@@ -18,7 +19,7 @@ unsafePopup=true
 
 [tracks.ICGC_Genes_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/Genes
-type=icgc-viewer/View/Track/CanvasVariants
+type=icgc-viewer/View/Track/GeneTrack
 key=ICGC_Genes_donor_DO229446
 donor=DO229446
 filters={"gene":{"type":{"is":["protein_coding"]}}}
@@ -27,7 +28,7 @@ unsafePopup=true
 
 [tracks.ICGC_SSMs_donor_DO229446]
 storeClass=icgc-viewer/Store/SeqFeature/SimpleSomaticMutations
-type=icgc-viewer/View/Track/CanvasVariants
+type=icgc-viewer/View/Track/SSMTrack
 key=ICGC_SSMs_donor_DO229446
 donor=DO229446
 filters={"mutation":{"functionalImpact":{"is":["High"]}}}
