update readme, added images

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM node:latest
 LABEL maintainer="andrew.duncan@oicr.on.ca"
 
 ENV JBROWSE_VERSION 1.16.6
+ENV PLUGIN_VERSION=0.1.7
 
 # Install dependencies
 RUN apt-get -qq update --fix-missing
@@ -19,7 +20,7 @@ WORKDIR /jbrowse/
 # Download ICGC Viewer
 RUN git clone https://github.com/agduncan94/icgc-viewer /icgc-viewer/ && \
     cd /icgc-viewer/ && \
-    git checkout 0.1.7 && \
+    git checkout ${PLUGIN_VERSION} && \
     cp -r icgc-viewer /jbrowse/plugins/icgc-viewer && \
     cat ./data/jbrowse.conf > /jbrowse/jbrowse.conf
 
