better display of apply filters

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cypress": "^3.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "e2e": "npx cypress run"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,7 @@
   },
   "keywords": [
     "icgc",
+    "cancer",
     "jbrowse",
     "genome",
     "browser"
