--- a/.travis.yml
+++ b/.travis.yml
@@ -62,5 +62,5 @@ deploy:
   local-dir: ../jbrowse/JBrowse-$RELEASE_VERSION
   upload-dir: code/icgc-viewer/$TRAVIS_BRANCH
   on:
-    repo: agduncan94/icgc-viewer
+    repo: LincolnSteinLab/icgc-viewer
     tags: true
