--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,8 +27,7 @@ RUN git clone https://github.com/LincolnSteinLab/icgc-viewer /icgc-viewer/ && \
     cat ./data/jbrowse.conf > /jbrowse/jbrowse.conf
 
 # Setup JBrowse
-RUN yarn install && \
-    yarn build
+RUN ./setup.sh
 
 # Expose port 3000
 EXPOSE 3000
